fix respondive web design
Add scrollbar styling
fix css errors

--- a/style.css
+++ b/style.css
@@ -623,6 +623,20 @@ footer .social-media i {
 
 
 @media (width > 700px) {
+    .body {
+        overflow-x: hidden;
+    }
+
+    .body::-webkit-scrollbar{
+        background-color: var(--one);
+        width: 0.8vw;
+    } 
+
+    .body::-webkit-scrollbar-thumb {
+        background-color: var(--three);
+        border-radius: 1rem;
+    }
+
     .social-media a:hover {
         color: var(--four);
     }
@@ -658,22 +672,15 @@ footer .social-media i {
       grid-template-columns: repeat(2, 1fr);
       max-width: 100vw;
       min-width: 100vw;
-      margin: 0 auto;
-    }
-
-    .my-projects div {
-        min-width: none;
-        min-width: 30vw;
-        max-width: 40vw;
-        min-height: 1%;
-        padding: 3rem;
     }
 
     .fig-with-background {
-        min-width: 30vw;
-        max-width: 40vw;
+        min-width: 40vw;
+        max-width: 100vw;
         min-height: 50vh;
-
+        max-height: 50vh;
+        border: none;
+        background-size: contain;
     }
 
     .my-projects-title {
